# pgraph

./: ARCHITECTURE.md  Cargo.toml  README.md  topo.rs
examples/: edge_connecting.rs  ex.rs  outgoing_neighbors.rs  topo.rs  tree.rs
src/: algo.rs  edge.rs  edges.rs  edges_mut.rs  error.rs  graph.rs  graph_kind.rs  graph_ref.rs  incoming_neighbors.rs  index.rs  lib.rs  neighbors.rs  next.rs  node.rs  outgoing_neighbors.rs  prelude.rs  reversed.rs  stack.rs  tree.rs  visit.rs
tests/: edge_connecting.rs  edges.rs  edges_mut.rs  graph.rs  outgoing_neighbors.rs  remove_node.rs  toposort.rs
