[package]
name = "pgraph"
version = "0.1.0"
authors = ["adamnemecek <adamnemecek@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = { git = "https://github.com/adamnemecek/generational-arena", version = "0.2.9", features = ["serde"] }
fixedbitset = { version = "0.3.0", default-features = false }
ngds = "*"